<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".hitungBalok">


    <TextView
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/masukan_data_balok"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/panjang"/>
    <EditText
        android:id="@+id/balok_panjang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="numberDecimal|numberSigned"
        android:autofillHints="panjang" />


    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lebar"/>
    <EditText
        android:id="@+id/balok_lebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"

        android:autofillHints="lebar "
        />


    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tinggi"/>
    <EditText
        android:autofillHints="tinggi "
        android:id="@+id/balok_tinggi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="10dp"
        android:inputType="numberDecimal|numberSigned"
        />
    <Button
        android:id="@+id/hitung_balok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hitung_volume"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hasil"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/hasil"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        />







</LinearLayout>