<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".hitungBalok">


    <TextView
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/masukan_data_tabung"
        android:textColor="@color/black"
        android:textAlignment="center"/>


    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tinggi"/>
    <EditText
        android:id="@+id/tabung_tinggi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="numberDecimal|numberSigned"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jari_jari"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tabung_jari"
        android:inputType="numberDecimal|numberSigned"
        />
    <Button
        android:id="@+id/hitung_tabung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hitung_volume"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hasil_volume"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/hasil_tabung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        />







</LinearLayout>